--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <!-- <script src="https://kit.fontawesome.com/77ec3f06e3.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/77ec3f06e3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Righteous">    
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Digital">
   </head>
   <body style="height: 100%;">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
